--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -13,3 +13,8 @@ $light: rgba(191, 192, 192, 1);
 $white: rgba(255, 255, 255, 1);
 $accent1: rgba(239, 131, 84, 1);
 $accent2: rgba(79, 93, 117, 1);
+
+$web: rgb(255, 109, 0);
+$design: rgb(158, 229, 133);
+$art: rgb(65, 117, 222);
+$music: rgb(234, 37, 37);
