added login feature on cs-admin route

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,4 +9,5 @@
 @import 'styles/global';
 @import 'styles/navBar';
 @import 'styles/featured';
+@import 'resources/font-mfizz-2.4.1/font-mfizz.css';
 
