adding info and resume to back end

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,8 +6,10 @@
 @import 'styles/colors';
 
 // components
+@import 'styles/mixins';
 @import 'styles/global';
 @import 'styles/navBar';
 @import 'styles/featured';
+@import 'styles/pieceHeader';
 @import 'resources/font-mfizz-2.4.1/font-mfizz.css';
 
