--- a/src/styles/_navBar.scss
+++ b/src/styles/_navBar.scss
@@ -1,228 +1,10 @@
 /*NAVIGATION STYLING*/
 /*--------------------------------------------------------------------*/
-header.nav {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    transform-style: preserve-3d;
-
-    div {
-        margin: 0;
-        width: 30px;
-        height: 30px;
-        display: block;
-        position: absolute;
-        transform:  translateZ(10px);
-
-        .slideElement {
-            position: absolute;
-            top: 20px;
-            font-size: 1.5em;
-            width: 20px;
-            padding-right: 5px;
-            transition: transform 0.5s;
-        }
-    }
-}
-
-.web-link {
-    color: $web;
-}
-
-.art-link {
-    color: $art;
-}
-
-.design-link {
-    color: $design;
-}
-
-.music-link {
-    color: $music;
-}
-
-#cube-container {
-    width: 100px;
-    height: 100px;
+.menu {
     position: fixed;
-    perspective: 10000px;
-    margin: 100px;
-    z-index: 1;
-}
-
-#cube {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    transform-style: preserve-3d;
-}
-    #cube:hover > #front {
-        transform:  
-            rotateX(30deg) 
-            rotateY(45deg) 
-            rotateZ(0deg) 
-            translateX(600px) 
-            translateY(-220px)
-            translateZ(100px);
-    }
-
-    #cube:hover > #bottom {
-        transform:  
-            rotateX(30deg) 
-            rotateY(45deg) 
-            rotateZ(0deg) 
-            translateX(0px) 
-            translateY(500px)
-            translateZ(100px);
-/*        background-image: url(../img/R_letterlight.svg);*/
-    }
-
-#cube svg {
-    margin: 0;
-    width: 100px;
-    height: 100px;
-    display: block;
-    position: absolute;
-}
-
-
-/*Slide out header */
-/*--------------------------------------*/
-
-
-/*Slide down Nav*/
-/*--------------------------------------------*/
-#nav {
-    transform: translateZ(-1px); 
-}
-
-#nav .slideElement {
-    position: absolute;
-    display: block;
-    height: 50px;
-    transition: transform 0.5s;
-}
-
-#navSpacer {
-    width: 100px;
-}
-
-/*This is the styling for each individual letter*/
-.navLink .slideNavElement {
-    // position: absolute;
-    // height: 50px;
-    // width: 15px;
-    font-size: 1.2rem;
-    transition: transform 0.5s;
-}
-
-/*cube faces*/
-/*--------------------------------------------*/
-
-.cube-face {
-    opacity: 0;
-}
-
-#front {
-    transform:  
-        rotateX(30deg) 
-        rotateY(45deg) 
-        rotateZ(0deg) 
-        translateZ(50px);
-    transition: transform 0.5s;
-    // z-index: 100;
-    background-image: url('/assets/images/S_letter.svg');
-
-    & .cls-1 {
-        fill: #ff6d00;
-    }
-    & .cls-2 {
-        fill: #ebebeb;
-    }
-}
-
-#back {
-    transform:  
-        rotateX(30deg) 
-        rotateY(-135deg) 
-        rotateZ(0deg) 
-        translateZ(50px);
-    background-image: url('/assets/images/S_letterdark.svg');
-
-    & .cls-1 {
-        fill: #b24800;
-    }
-
-    & .cls-2 {
-        fill: #adadad;
-    }
-    
-}
-
-#top {
-    transform:  
-        rotateX(120deg) 
-        rotateY(0deg) 
-        rotate(45deg) 
-        translateZ(50px);
-    background-image: url('/assets/images/R_letterdark.svg');
-
-    & .cls-1 {
-        fill: #a3a3a3;
-    }
-
-    & .cls-2 {
-        fill: #b24800;
-    }
-}
-
-#bottom {
-    transform:  
-        rotateX(-60deg) 
-        rotate(45deg) 
-        translateZ(50px);
-    transition: transform 0.5s, background-image 0.5s;
-    transition: transform 0.5s, background-image 0.5s, -webkit-transform 0.5s;
-    background-image: url('/assets/images/R_letter.svg');
-
-    & .cls-1 {
-        fill: #adadad;
-    }
-
-    & .cls-2 {
-        fill: #b24800;
-    }
-}
-
-#left {
-    transform:  
-        rotateX(30deg) 
-        rotateY(-45deg) 
-        translateZ(50px);
-    background-image: url('/assets/imagesimg/C_letter.svg');
-
-    & .cls-1 {
-        fill: #ebebeb;
-    }
-
-    & .cls-2 {
-        fill: #ff6d00;
-    }
-}
-
-#right {
-    transform:  
-        rotateX(30deg) 
-        rotateY(135deg) 
-        rotateZ(0deg) 
-        translateZ(50px);
-    background-image: url('/assets/images/C_letterdark.svg');
-
-    & .cls-1 {
-        fill: #adadad;
-    }
-
-    & .cls-2 {
-        fill: #b24800;
-    }
+    top: 20px;
+    left: 20px;
+    background-color: white;
+    border-radius: 2px;
+    @include shadow-shorter;
 }
